slskd-ton/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: slskd
  labels:
    app: slskd
spec:
  type: ClusterIP
  ports:
  - port: 5030
    targetPort: 5030
    protocol: TCP
    name: webui
  - port: 50300
    targetPort: 50300
    protocol: TCP
    name: soulseek
  selector:
    app: slskd
