slskd-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: slskd
  namespace: slskd
spec:
  hosts:
    - slskd.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: slskd
            port:
              number: 5030
